--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,14 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": [
+              "src/styles.scss",
+              {
+                "input": "./src/stylesheets/themes/_ligth-theme.scss",
+                "inject": false,
+                "bundleName": "light-theme"
+              }
+            ],
             "scripts": []
           },
           "configurations": {
