--- a/angular.json
+++ b/angular.json
@@ -26,6 +26,7 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "src/styles.scss",
+              "src/stylesheets/general/general.classes.scss",
               {
                 "input": "./src/stylesheets/themes/_ligth-theme.scss",
                 "inject": false,
